# xsched

./: .clangd  .gitignore  How_xsched_work.md  compile.sh  server_start.sh
apps/: requirements.txt  run.sh  run2.sh  run_yolo_example.sh  run_yolo_with_xsched.sh  yolo_xsched.py  yolo_xsched_no_default.py
apps/cuda_other/: Makefile  README.md  check_stream_concurrency.cu  check_stream_concurrency.py
examples/1_transparent_sched/: app  first.sh  second.sh
preempt/src/xqueue/: async_xqueue.cpp  launch_worker.cpp
sched/include/xsched/sched/policy/: up.h
sched/src/policy/: kedf.cpp
service/: CMakeLists.txt
service/server/src/: server.cpp
